@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/logstalgia
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/logstalgia/ChangeLog,v 1.2 2013/04/09 07:12:46 pinkbyte Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-admin/logstalgia/ChangeLog,v 1.3 2015/04/23 10:09:34 pinkbyte Exp $
+
+*logstalgia-1.0.6 (23 Apr 2015)
+
+  23 Apr 2015; Sergey Popov <pinkbyte@gentoo.org> +logstalgia-1.0.6.ebuild:
+  Version bump, wrt bug #541562. Thanks to Jesse Adelman <jesse AT
+  boldandbusted.com> for discovering this issue
 
 *logstalgia-1.0.3-r1 (09 Apr 2013)
 
